Cards styles was not working as expected due to overlapping css styling. Solved by adding css modules. Next step is to make this change to all the other components and their respective css files

--- a/src/styles/IndexBackup.css
+++ b/src/styles/IndexBackup.css
@@ -1,4 +1,4 @@
-.top-banner {
+/*.top-banner {
     background-color: #009fb7;
     height: 60px;
   }
